scss/spreadsheet/_layout.scss
/* ... */
@include exports( "spreadsheet/filter/layout" ) {

    $filter-menu-padding-left: calc( #{$icon-size} + #{2 * $padding-y} );

    // Filter button
    .k-spreadsheet .k-filter-wrapper {
        position: relative;
    }
    .k-spreadsheet .k-filter-range {
        border-width: 1px;
        border-style: solid;
        position: absolute;
        box-sizing: border-box;
    }
    .k-spreadsheet-filter {
        @include border-radius();
        line-height: 1;
        position: absolute;
        cursor: pointer;

        .k-icon { vertical-align: middle; }
    }


    // Filter menu
    .k-spreadsheet-filter-menu {
        width: 280px;

        .k-animation-container {
            position: relative;
        }

        > .k-menu {
            border-width: 0;

            .k-item {
                color: inherit;
            }
            .k-link {
                padding-left: $filter-menu-padding-left;
            }
            .k-icon {
                margin-left: calc(-1 * ( #{$icon-size} + #{$padding-y} ) );
                margin-right: $padding-y;
            }

        }

        .k-spreadsheet-value-treeview-wrapper {
            height: 200px;
            border-width: 1px;
            border-style: solid;
            overflow-y: scroll;
            overflow-x: auto;

            .k-treeview {
                padding: $padding-y;
                overflow: visible;
            }
        }

        // Details
        .k-details {
            padding: 0;
            border-width: 1px 0 0;
            border-style: solid;
            border-color: inherit;
        }
        .k-details-summary {
            padding: $padding-y;
            cursor: pointer;

            > .k-icon {
                margin-right: $padding-y;
            }
        }
        .k-details-content {
            padding: $padding-y $padding-x $padding-y $filter-menu-padding-left;

            > .k-textbox,
            > .k-widget {
                width: 100%;
                margin-bottom: 3px;
            }

            .k-space-right {
                background-image: none;
            }

            .k-filter-and {
                width: 75px;
                margin: 8px 0;
            }
        }


        // Action buttons
        .k-action-buttons {
            margin: $spacer 0 0;
        }

    }

}




@include exports( "spreadsheet/tools/layout" ) {

    .k-spreadsheet-popup {
        padding: 0;

        .k-separator {
            display: block;
        }

        .k-button {
            @include border-radius( 0 );
            border-width: 0;
            color: inherit;
            background: none;
        }
        .k-button-icontext {
            display: flex;
            justify-content: flex-start;
        }

        .k-reset-color,
        .k-custom-color {
            @include border-radius( 0 );
            width: 100%;
            border-width: 0;
            box-sizing: border-box;
            display: flex;
        }
        .k-reset-color { border-bottom-width: 1px; }
        .k-custom-color { border-top-width: 1px; }
        .k-spreadsheet-color-palette {
            padding: $popup-padding-y;
        }
        .k-spreadsheet-border-type-palette {
            width: 12.5rem;
            height: 5rem;
            display: flex;
            flex-flow: row wrap;
            align-content: space-around;
            justify-content: space-around;
        }

    }

    .k-spreadsheet-sample {
        float: right;
        opacity: .7;
    }
}




@include exports( "spreadsheet/clipboard/layout" ) {

    .k-spreadsheet-clipboard,
    .k-spreadsheet-clipboard-paste {
        margin: 0;
        padding: 0;
        width: 1px;
        height: 1px;
        border: 0;
        opacity: 0;
        position: absolute;
        top: 0;
        left: 0;
        overflow: hidden;
    }

}




@include exports( "spreadsheet/window/layout" ) {

    .k-spreadsheet-window {}
    .k-spreadsheet-window .k-edit-form-container {
        width: auto;
        min-width: 0;
    }


    // Format preview window
    .k-spreadsheet-format-cells {

        .k-spreadsheet-preview {
            margin-top: ($spacer / 2);
            text-align: center;
        }

        .k-list-scroller {
            margin-top: ($spacer / 2);
            height: 210px;
            border-width: 1px;
            border-style: solid;
            border-color: inherit;
        }

        .k-tabstrip-top  {
            margin-left: ($spacer / -2);
            margin-right: ($spacer / -2);

            & > .k-tabstrip-items {
                padding: 0 $padding-x;
            }
        }
    }

}

